--- a/pkg/api/v1/node/BUILD
+++ b/pkg/api/v1/node/BUILD
@@ -3,12 +3,21 @@ package(default_visibility = ["//visibility:public"])
 load(
     "@io_bazel_rules_go//go:def.bzl",
     "go_library",
+    "go_test",
 )
 
 go_library(
     name = "go_default_library",
     srcs = ["util.go"],
     importpath = "k8s.io/kubernetes/pkg/api/v1/node",
+    deps = ["//vendor/k8s.io/api/core/v1:go_default_library"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["util_test.go"],
+    importpath = "k8s.io/kubernetes/pkg/api/v1/node",
+    library = ":go_default_library",
     deps = ["//vendor/k8s.io/api/core/v1:go_default_library"],
 )
 
