--- a/api/swagger-spec/apps_v1beta2.json
+++ b/api/swagger-spec/apps_v1beta2.json
@@ -8656,6 +8656,43 @@
       "type": "integer",
       "format": "int32",
       "description": "Count of hash collisions for the DaemonSet. The DaemonSet controller uses this field as a collision avoidance mechanism when it needs to create the name for the newest ControllerRevision."
+     },
+     "conditions": {
+      "type": "array",
+      "items": {
+       "$ref": "v1beta2.DaemonSetCondition"
+      },
+      "description": "Represents the latest available observations of a DaemonSet's current state."
+     }
+    }
+   },
+   "v1beta2.DaemonSetCondition": {
+    "id": "v1beta2.DaemonSetCondition",
+    "description": "DaemonSetCondition describes the state of a DaemonSet at a certain point.",
+    "required": [
+     "type",
+     "status"
+    ],
+    "properties": {
+     "type": {
+      "type": "string",
+      "description": "Type of DaemonSet condition."
+     },
+     "status": {
+      "type": "string",
+      "description": "Status of the condition, one of True, False, Unknown."
+     },
+     "lastTransitionTime": {
+      "type": "string",
+      "description": "Last time the condition transitioned from one status to another."
+     },
+     "reason": {
+      "type": "string",
+      "description": "The reason for the condition's last transition."
+     },
+     "message": {
+      "type": "string",
+      "description": "A human readable message indicating details about the transition."
      }
     }
    },
