--- a/plugin/pkg/admission/initialresources/BUILD
+++ b/plugin/pkg/admission/initialresources/BUILD
@@ -10,6 +10,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "admission.go",
+        "config.go",
         "data_source.go",
         "gcm.go",
         "hawkular.go",
@@ -18,6 +19,10 @@ go_library(
     importpath = "k8s.io/kubernetes/plugin/pkg/admission/initialresources",
     deps = [
         "//pkg/apis/core:go_default_library",
+        "//plugin/pkg/admission/initialresources/apis/initialresources:go_default_library",
+        "//plugin/pkg/admission/initialresources/apis/initialresources/install:go_default_library",
+        "//plugin/pkg/admission/initialresources/apis/initialresources/v1alpha1:go_default_library",
+        "//plugin/pkg/admission/initialresources/apis/initialresources/validation:go_default_library",
         "//vendor/cloud.google.com/go/compute/metadata:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/github.com/hawkular/hawkular-client-go/metrics:go_default_library",
@@ -27,7 +32,11 @@ go_library(
         "//vendor/google.golang.org/api/cloudmonitoring/v2beta2:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/apimachinery/announced:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/apimachinery/registered:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/admission:go_default_library",
         "//vendor/k8s.io/client-go/rest:go_default_library",
         "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
@@ -47,6 +56,8 @@ go_test(
     library = ":go_default_library",
     deps = [
         "//pkg/apis/core:go_default_library",
+        "//plugin/pkg/admission/initialresources/apis/initialresources:go_default_library",
+        "//plugin/pkg/admission/initialresources/apis/initialresources/v1alpha1:go_default_library",
         "//vendor/github.com/stretchr/testify/require:go_default_library",
         "//vendor/golang.org/x/oauth2:go_default_library",
         "//vendor/golang.org/x/oauth2/google:go_default_library",
