--- a/test/integration/deployment/BUILD
+++ b/test/integration/deployment/BUILD
@@ -17,13 +17,16 @@ go_test(
     importpath = "k8s.io/kubernetes/test/integration/deployment",
     tags = ["integration"],
     deps = [
+        "//pkg/api/v1/pod:go_default_library",
         "//pkg/controller/deployment/util:go_default_library",
         "//test/integration/framework:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/util/uuid:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
+        "//vendor/k8s.io/client-go/util/retry:go_default_library",
     ],
 )
 
