--- a/pkg/apis/core/BUILD
+++ b/pkg/apis/core/BUILD
@@ -32,7 +32,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["taint_test.go"],
+    srcs = [
+        "taint_test.go",
+        "toleration_test.go",
+    ],
     importpath = "k8s.io/kubernetes/pkg/apis/core",
     library = ":go_default_library",
 )
